@@ -1,3 +1,7 @@
+2006-08-03 Mateusz Loskot <mateusz@loskot.net>
+
+	* tests/unit/geos_unit.cpp: fixed Bug #90
+
 2006-07-26 Sandro Santilli <strk@refractions.net>
 
 	* capi/Makefile.am: forced link of geostest against stdc++ lib
